--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ body {
 
 
     <div id="stats" class="content-section">
-        <h2>Журнал питания</h2>
+        <h1 style="margin-left: 15px;">Журнал питания</h1>
         
         <div class="stats-card">
             <div class="stats-header">
