--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@ body {
             
             <div class="ai-tip-card">
                 <div class="ai-header">
-                    <i class="fa-solid fa-wand-magic-sparkles"></i> Диетолог
+                    <i class="fa-solid fa-wand-magic-sparkles"></i> Совет
                 </div>
                 <p>Съешь сейчас ужин с белками (курица, рыба), сложные углеводы и овощи.</p>
             </div>
