--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ body {
 
     <div id="stats" class="content-section">
         
-        <div class="stats-card">
+        <div class="stats-card" style="margin-bottom: 5px; padding-bottom: 10px;">
             <div class="stats-header">
                 <div>
                     <span class="label">Сегодня</span>
@@ -699,7 +699,7 @@ body {
         </div>
 
         <div class="food-history-container">
-            <h3 style="margin-left: 15px; margin-top: -20px; margin-bottom: 10px;">
+            <h3 style="margin-left: 15px; margin-top: 5px; margin-bottom: 10px;">
                 История за сегодня
             </h3>
 
