--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ body {
         <div class="main-header-bg">
             <div class="top-stats-row" style="margin-top: 30px;">
                 <div class="stat-side">
-                    <span class="stat-val">1877</span>
+                    <span class="stat-val" id="cal-left">2500</span>
                     <span class="stat-label">Осталось</span>
                 </div>
 
